--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.gitignore.io/api/android,androidstudio
-# Edit at https://www.gitignore.io/?templates=android,androidstudio
+# Created by https://www.gitignore.io/api/linux,macos,kotlin,windows,android,androidstudio
+# Edit at https://www.gitignore.io/?templates=linux,macos,kotlin,windows,android,androidstudio
 
 ### Android ###
 # Built application files
@@ -94,6 +93,98 @@ output.json
 # with Android Studio 3.5.
 .cxx/
 
+### Kotlin ###
+# Compiled class file
+
+# Log file
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
 ### AndroidStudio ###
 # Covers files to be ignored for android development using Android Studio.
 
@@ -124,7 +215,6 @@ output.json
 /*/*/build
 /*/*/production
 *.ipr
-*~
 *.swp
 
 # Android Patch
@@ -157,13 +247,7 @@ obj/
 .idea/uiDesigner.xml
 
 # OS-specific files
-.DS_Store
 .DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
 # Legacy Eclipse project files
 .classpath
@@ -172,14 +256,10 @@ Thumbs.db
 .settings/
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
-*.war
-*.ear
 
 # virtual machine crash logs (Reference: http://www.java.com/en/download/help/error_hotspot.xml)
-hs_err_pid*
 
 ## Plugin-specific files:
 
@@ -202,5 +282,4 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-# End of https://www.gitignore.io/api/android,androidstudio
-
+# End of https://www.gitignore.io/api/linux,macos,kotlin,windows,android,androidstudio
