--- a/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/app/build.gradle
+++ b/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$version_kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.1.0"
 
     // Constraint Layout
     implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
@@ -74,5 +75,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
+
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 
 }
