--- a/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/app/build.gradle
+++ b/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/app/build.gradle
@@ -40,6 +40,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion = '28.0.3'
     androidExtensions {
         experimental = true
     }
