--- a/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/build.gradle
+++ b/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/build.gradle
@@ -24,7 +24,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${version_android_gradle_plugin}"
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
     }
